--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,7 +20,7 @@ repos:
         name: biome check
         entry: mise exec -- pnpm exec biome check --write
         language: system
-        types_or: [javascript, ts, json]
+        types_or: [javascript, ts, tsx, jsx, json, css]
         pass_filenames: true
 
   # TypeScript: Type checker
@@ -33,11 +33,20 @@ repos:
         types: [ts]
         pass_filenames: false
 
+  # Test: Run tests
+  - repo: local
+    hooks:
+      - id: test
+        name: test (TypeScript)
+        entry: mise exec -- pnpm test
+        language: system
+        types: [ts]
+        pass_filenames: false
+
   # ============================================================================
   # Common Checks
   # ============================================================================
 
-  # Check for trailing whitespace
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
@@ -45,33 +54,21 @@ repos:
         name: trim trailing whitespace
         exclude_types: [image]
 
-  # Check for files that would conflict in merge
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
       - id: check-merge-conflict
         name: check for merge conflicts
 
-  # Check JSON files are valid
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
       - id: check-json
         name: check JSON files
         types: [json]
 
-  # Check YAML files are valid
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
       - id: check-yaml
         name: check YAML files
         types: [yaml]
 
-  # Ensure files end with newline
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v5.0.0
-    hooks:
+      - id: check-toml
+        name: check TOML files
+        types: [toml]
+
       - id: end-of-file-fixer
         name: fix end of files
         exclude_types: [image]
