--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ai-agent",
     "composite-tools"
   ],
-  "version": "3.1.0-beta.1",
+  "version": "2.3.12",
   "license": "MIT",
   "type": "module",
   "packageManager": "pnpm@9.15.4",
