chore: implement dual manifest strategy for release pipeline
- Separate beta (.release-please-manifest-beta.json) from stable manifest
- Add stale release-please PR cleanup in promote step
- Make CD check lenient (warn on deploy failures instead of blocking)

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -49,6 +49,17 @@ jobs:
           chmod +x .github/scripts/check-ci-cd-status.sh
           ./.github/scripts/check-ci-cd-status.sh --branch=dev
 
+      - name: Close stale release-please PRs on main
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
+        run: |
+          STALE_PRS=$(gh pr list --base main --label "autorelease: pending" --json number --jq '.[].number')
+          for pr in $STALE_PRS; do
+            echo "Closing stale release PR #$pr"
+            gh pr close "$pr" --comment "Closed by promote workflow. A new release PR will be created after promotion."
+          done
+          git push origin --delete release-please--branches--main 2>/dev/null || true
+
       - name: Create PR to promote dev to main
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
@@ -98,7 +109,7 @@ jobs:
         with:
           token: ${{ secrets.GH_PAT }}
           config-file: release-please-config-beta.json
-          manifest-file: .release-please-manifest.json
+          manifest-file: .release-please-manifest-beta.json
           target-branch: dev
 
   release-stable:
@@ -353,8 +364,13 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GH_PAT }}
 
-      - name: Recreate dev branch from main
+      - name: Sync beta manifest and recreate dev
         run: |
+          cp .release-please-manifest.json .release-please-manifest-beta.json
+          git add .release-please-manifest-beta.json
+          git diff --cached --quiet || git commit -m "chore: sync beta manifest from stable [skip ci]"
+          git push origin main
+
           git push origin --delete dev || true
           git checkout -b dev
           git push origin dev
