--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ai-agent",
     "composite-tools"
   ],
-  "version": "2.5.2",
+  "version": "2.5.3-beta",
   "license": "MIT",
   "type": "module",
   "packageManager": "pnpm@9.15.4",
