fix(ci): exclude release-please manifests from Biome formatter
Release-please generates .release-please-manifest*.json with compact
JSON formatting (no bracket spacing), which conflicts with Biome's
bracketSpacing rule. Exclude these auto-generated files from formatting.

--- a/biome.json
+++ b/biome.json
@@ -28,7 +28,8 @@
       "!**/coverage",
       "!**/*.log",
       "!**/.env",
-      "!package.json"
+      "!package.json",
+      "!.release-please-manifest*.json"
     ]
   },
   "linter": {
