chore: add UV_LINK_MODE to mise.toml, update release docs to PSR

--- a/.mise.toml
+++ b/.mise.toml
@@ -12,6 +12,9 @@ python = "3.13"
 [settings]
 trusted_config_paths = ["."]
 
+[env]
+UV_LINK_MODE = "copy"
+
 [tasks.setup]
 description = "Setup development environment"
 run = [
