docs: update docker-compose with notion token env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   better-notion-mcp:
     build: .
+    # image: n24q02m/better-notion-mcp:latest  # Use pre-built image instead of build
     stdin_open: true
-    tty: true
+    environment:
+      NOTION_TOKEN: ${NOTION_TOKEN}
     restart: unless-stopped
